# adsa

./: .gitignore  README.md  pyproject.toml
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
frontend_v2/: dashboard.py
src/: cli.py
src/engine/core/: config.py
src/engine/phase_1_planning/: analyzer.py  ingestion.py  orchestrator.py  planner.py  profiler.py
src/engine/phase_2_execution/: coder.py  orchestrator.py  sandbox.py
src/engine/phase_3_reporting/: reporting.py
workspaces/test_workspace/: final_report.md  requirements.txt  session_state.json
workspaces/test_workspace/artifacts/: best_model.joblib  data_profile.json  engineered_features.parquet  holdout_idx.npy  label_encoder.joblib  manifest.json  model_cv_report.csv  preprocessor.joblib  train_idx.npy
workspaces/test_workspace/data/active/: copy_test_data.csv
workspaces/test_workspace/data/raw/: test_data.csv
workspaces/test_workspace/data_info/: blueprint.md  llm_summary.txt  profiler_summary.txt
workspaces/test_workspace/generated_scripts/: step_1.py  step_2.py  step_3.py  step_4.py  step_5.py  step_6.py  step_7.py  step_8.py
