[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adsa"
version = "0.1.0"
description = "Autonomous Data Science Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.2",
    "dotenv>=0.9.9",
    "fpdf2>=2.8.7",
    "groq>=1.5.0",
    "openai>=2.45.0",
    "pandas>=3.0.3",
    "polars>=1.42.1",
    "requests>=2.34.2",
    "rich>=15.0.0",
]

[project.scripts]
adsa = "src.cli:main"

[tool.setuptools]
packages = ["src"]