[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adsa"
version = "0.1.0"
description = "Autonomous Data Science Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.2.2",
    "click>=8.4.2",
    "dotenv>=0.9.9",
    "fastparquet>=2026.5.0",
    "fpdf2>=2.8.7",
    "groq>=1.5.0",
    "joblib>=1.5.3",
    "openai>=2.45.0",
    "pandas>=3.0.3",
    "polars>=1.42.1",
    "pyarrow>=25.0.0",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "streamlit>=1.59.1",
    "watchdog>=6.0.0",
]

[project.scripts]
adsa = "src.cli:main"

[tool.setuptools]
packages = ["src"]
